compiler/testData/diagnostics/tests/deprecated/kt82555/resolveToDeprecatedHiddenCompanion.kt
// RUN_PIPELINE_TILL: FRONTEND


class C {
    @Deprecated("", level = DeprecationLevel.HIDDEN)
    companion object
}

fun test() {
    <!NO_COMPANION_OBJECT!>C<!>
    <!DEPRECATION_ERROR!>C<!>.toString()
}

/* GENERATED_FIR_TAGS: classDeclaration, companionObject, functionDeclaration, objectDeclaration, stringLiteral */
